# Friday-e-demo

./: .gitignore  README.md
backend/: agent.py  agent_definition example.json  agent_definition working.json  api.py  function.ipynb
backend/src/: api.py  pyproject.toml
docs/: llm-requirements.md  user-requirements.md
frontend/: README.md  eslint.config.js  index.html  package-lock.json  vite.config.ts
frontend/public/: article-entry-schema.json
frontend/src/: App.css  index.css  vite-env.d.ts
frontend/src/components/: AgentForm.tsx  ChipListInput.tsx  KeyValueCards.tsx  MessageSchemaCard.tsx
frontend/src/pages/: HomePage.tsx
frontend/src/services/: api.ts
frontend/src/types/: agent.ts
mcps/: main.py  pyproject.toml
streamlit_frontend/: functions.py  main.py  pyproject.toml
